fix(waybar): change charging battery colors for better readability

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -119,8 +119,8 @@ button:hover {
 }
 
 #battery.charging, #battery.plugged {
-    color: @text;
-    background-color: @yellow;
+    color: @yellow;
+    background-color: @base;
 }
 
 @keyframes blink {
